--- a/index.html
+++ b/index.html
@@ -1,236 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monthly Debits & Credits Tracker</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-        background: #f7f7f7;
-      }
-      h2, h3 {
-        color: #333;
-      }
-      input[type="month"] {
-        padding: 8px;
-        font-size: 16px;
-      }
-      table {
-        border-collapse: collapse;
-        margin-top: 20px;
-        width: 100%;
-        max-width: 700px;
-        background: white;
-        border-radius: 8px;
-        overflow: hidden;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      th, td {
-        border: 1px solid #ddd;
-        padding: 10px;
-        text-align: center;
-      }
-      th {
-        background: #f0f0f0;
-        font-weight: bold;
-      }
-      input[type="number"] {
-        width: 95%;
-        padding: 6px;
-        font-size: 15px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-      input[type="number"]:focus {
-        border-color: #007bff;
-        outline: none;
-      }
-      button {
-        margin-top: 15px;
-        padding: 12px 18px;
-        border: none;
-        background: #25d366;
-        color: white;
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 6px;
-        transition: background 0.2s;
-        width: 100%;
-        max-width: 300px;
-      }
-      button:hover {
-        background: #1da851;
-      }
-      #calculateBtn {
-        background: #007bff;
-      }
-      #calculateBtn:hover {
-        background: #0056b3;
-      }
-      #remainingDebt {
-        margin-top: 15px;
-        font-size: 18px;
-        font-weight: bold;
-        color: #333;
-      }
-      #tableContainer {
-        margin-top: 10px;
-      }
-      tfoot td {
-        font-weight: bold;
-        background: #f9f9f9;
-      }
-      @media (max-width: 600px) {
-        body {
-          padding: 10px;
-        }
-        table {
-          font-size: 14px;
-        }
-        input[type="number"] {
-          font-size: 14px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <h2>📅 Select Month to Enter Debits & Credits</h2>
-    <input type="month" id="monthPicker" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Debt Monitoring</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    table {
+      width: 100%;
+      max-width: 600px;
+      margin: auto;
+      border-collapse: collapse;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background-color: #4CAF50;
+      color: white;
+    }
+    td[contenteditable="true"] {
+      background-color: #eef8ff;
+      outline: none;
+    }
+    tfoot td {
+      font-weight: bold;
+      background-color: #f0f0f0;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 15px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    #result {
+      margin-top: 15px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    #whatsapp {
+      display: block;
+      width: 100%;
+      max-width: 250px;
+      margin: 20px auto;
+      padding: 10px;
+      background-color: #25D366;
+      color: white;
+      font-size: 16px;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
 
-    <div id="tableContainer"></div>
+  <h2>Debt Monitoring Table</h2>
 
-    <button id="calculateBtn" style="display:none">🧮 Calculate Totals & Remaining Debt</button>
-    <button id="sendWhatsAppBtn" style="display:none">📩 Send via WhatsApp</button>
+  <table id="debtTable">
+    <thead>
+      <tr>
+        <th>Day</th>
+        <th>Debit</th>
+        <th>Credit</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td contenteditable="true">1</td>
+        <td contenteditable="true" class="debit"></td>
+        <td contenteditable="true" class="credit"></td>
+      </tr>
+      <tr>
+        <td contenteditable="true">2</td>
+        <td contenteditable="true" class="debit"></td>
+        <td contenteditable="true" class="credit"></td>
+      </tr>
+      <tr>
+        <td contenteditable="true">3</td>
+        <td contenteditable="true" class="debit"></td>
+        <td contenteditable="true" class="credit"></td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td>Total</td>
+        <td id="totalDebit">0</td>
+        <td id="totalCredit">0</td>
+      </tr>
+    </tfoot>
+  </table>
 
-    <div id="remainingDebt"></div>
+  <button onclick="calculateDebt()">Calculate Remaining Debt</button>
 
-    <script>
-      const monthPicker = document.getElementById("monthPicker");
-      const tableContainer = document.getElementById("tableContainer");
-      const sendBtn = document.getElementById("sendWhatsAppBtn");
-      const calcBtn = document.getElementById("calculateBtn");
-      const remainingDebtDiv = document.getElementById("remainingDebt");
+  <div id="result"></div>
 
-      // ---- CONFIG ----
-      const defaultDebt = 10000;
-      const whatsappNumber = "+905555555555"; // Buraya kendi numaranı gir (ülke koduyla)
+  <a id="whatsapp" href="https://wa.me/" target="_blank">📲 Open WhatsApp</a>
 
-      // Load saved data when month changes
-      monthPicker.addEventListener("change", () => {
-        const [year, month] = monthPicker.value.split("-");
-        const daysInMonth = new Date(year, month, 0).getDate();
-        const savedData = JSON.parse(localStorage.getItem(`data-${monthPicker.value}`)) || {};
+  <script>
+    // Safely evaluate arithmetic (no letters or symbols allowed except + - * / .)
+    function safeEval(expression) {
+      expression = expression.replace(/[^0-9+\-*/.()]/g, "");
+      try {
+        return Function('"use strict";return (' + expression + ')')();
+      } catch (e) {
+        return 0;
+      }
+    }
 
-        let tableHTML = `
-          <h3>Entries for ${monthPicker.value}</h3>
-          <table id="dataTable">
-            <thead>
-              <tr><th>Day</th><th>Debits</th><th>Credits</th></tr>
-            </thead>
-            <tbody>
-        `;
+    function updateTotals() {
+      let debitCells = document.querySelectorAll(".debit");
+      let creditCells = document.querySelectorAll(".credit");
+      let totalDebit = 0, totalCredit = 0;
 
-        for (let day = 1; day <= daysInMonth; day++) {
-          const debitVal = savedData[`debit${day}`] || "";
-          const creditVal = savedData[`credit${day}`] || "";
-          tableHTML += `
-            <tr>
-              <td>${String(day).padStart(2, "0")}/${month}/${year}</td>
-              <td><input type="number" id="debit${day}" value="${debitVal}" inputmode="decimal" /></td>
-              <td><input type="number" id="credit${day}" value="${creditVal}" inputmode="decimal" /></td>
-            </tr>
-          `;
-        }
-
-        tableHTML += `
-            </tbody>
-            <tfoot>
-              <tr><td>Total</td><td id="totalDebit">0</td><td id="totalCredit">0</td></tr>
-            </tfoot>
-          </table>
-        `;
-
-        tableContainer.innerHTML = tableHTML;
-        sendBtn.style.display = "inline-block";
-        calcBtn.style.display = "inline-block";
-        remainingDebtDiv.textContent = "";
-
-        // Add event listeners for auto-save
-        const inputs = document.querySelectorAll("input[type='number']");
-        inputs.forEach(input => {
-          input.addEventListener("input", saveData);
-          input.addEventListener("focus", () => input.select());
-        });
+      debitCells.forEach(cell => {
+        let val = safeEval(cell.innerText.trim());
+        if (!isNaN(val)) totalDebit += val;
       });
 
-      function saveData() {
-        if (!monthPicker.value) return;
-        const [year, month] = monthPicker.value.split("-");
-        const daysInMonth = new Date(year, month, 0).getDate();
-        const data = {};
-        for (let day = 1; day <= daysInMonth; day++) {
-          data[`debit${day}`] = document.getElementById(`debit${day}`)?.value || "";
-          data[`credit${day}`] = document.getElementById(`credit${day}`)?.value || "";
-        }
-        localStorage.setItem(`data-${monthPicker.value}`, JSON.stringify(data));
+      creditCells.forEach(cell => {
+        let val = safeEval(cell.innerText.trim());
+        if (!isNaN(val)) totalCredit += val;
+      });
+
+      document.getElementById("totalDebit").innerText = totalDebit.toFixed(2);
+      document.getElementById("totalCredit").innerText = totalCredit.toFixed(2);
+    }
+
+    function calculateDebt() {
+      let totalDebit = parseFloat(document.getElementById("totalDebit").innerText) || 0;
+      let totalCredit = parseFloat(document.getElementById("totalCredit").innerText) || 0;
+      let remainingDebt = totalCredit + 10000 - totalDebit;
+      document.getElementById("result").innerText = "💰 Remaining Debt: " + remainingDebt.toFixed(2);
+    }
+
+    document.addEventListener("input", e => {
+      if (e.target.classList.contains("debit") || e.target.classList.contains("credit")) {
+        updateTotals();
       }
+    });
 
-      // Calculate totals and remaining debt
-      calcBtn.addEventListener("click", () => {
-        const [year, month] = monthPicker.value.split("-");
-        const daysInMonth = new Date(year, month, 0).getDate();
+    // WhatsApp direct open (change to your number)
+    const phoneNumber = "905XXXXXXXXX"; // <-- put your number
+    document.getElementById("whatsapp").href = `https://wa.me/${phoneNumber}`;
+  </script>
 
-        let totalDebit = 0;
-        let totalCredit = 0;
-
-        for (let day = 1; day <= daysInMonth; day++) {
-          const debit = parseFloat(document.getElementById(`debit${day}`).value) || 0;
-          const credit = parseFloat(document.getElementById(`credit${day}`).value) || 0;
-          totalDebit += debit;
-          totalCredit += credit;
-        }
-
-        document.getElementById("totalDebit").textContent = totalDebit.toFixed(2);
-        document.getElementById("totalCredit").textContent = totalCredit.toFixed(2);
-
-        const remainingDebt = totalCredit + defaultDebt - totalDebit;
-        remainingDebtDiv.textContent = `💰 Remaining Debt: ${remainingDebt.toFixed(2)}`;
-
-        // Save after calculation too
-        saveData();
-      });
-
-      // WhatsApp send button
-      sendBtn.addEventListener("click", () => {
-        if (!monthPicker.value) {
-          alert("Please select a month first!");
-          return;
-        }
-        const [year, month] = monthPicker.value.split("-");
-        const daysInMonth = new Date(year, month, 0).getDate();
-        let message = `📊 Debits & Credits for ${monthPicker.value}:\n\n`;
-
-        let totalDebit = 0;
-        let totalCredit = 0;
-
-        for (let day = 1; day <= daysInMonth; day++) {
-          const debit = document.getElementById(`debit${day}`).value.trim();
-          const credit = document.getElementById(`credit${day}`).value.trim();
-          if (debit !== "" || credit !== "") {
-            message += `${String(day).padStart(2,"0")}/${month}/${year} → Debit: ${debit || "-"}, Credit: ${credit || "-"}\n`;
-          }
-          totalDebit += parseFloat(debit) || 0;
-          totalCredit += parseFloat(credit) || 0;
-        }
-
-        const remainingDebt = totalCredit + defaultDebt - totalDebit;
-        message += `\n🔹 Total Debit: ${totalDebit.toFixed(2)}\n🔹 Total Credit: ${totalCredit.toFixed(2)}\n💰 Remaining Debt: ${remainingDebt.toFixed(2)}`;
-
-        const encoded = encodeURIComponent(message);
-        window.open(`https://wa.me/${whatsappNumber}?text=${encoded}`, "_blank");
-      });
-    </script>
-  </body>
+</body>
 </html>
