--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Debt Monitoring</title>
   <style>
     body {
@@ -13,7 +13,14 @@
       text-align: center;
     }
     h2 {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+    }
+    select, button {
+      margin: 10px;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
     table {
       width: 100%;
@@ -40,19 +47,6 @@
       font-weight: bold;
       background-color: #f0f0f0;
     }
-    button {
-      margin-top: 20px;
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
     #result {
       margin-top: 15px;
       font-size: 18px;
@@ -70,54 +64,96 @@
       border-radius: 8px;
       text-decoration: none;
     }
+    #whatsapp:hover {
+      background-color: #1ebe5d;
+    }
   </style>
 </head>
 <body>
 
   <h2>Debt Monitoring Table</h2>
 
-  <table id="debtTable">
-    <thead>
-      <tr>
-        <th>Day</th>
-        <th>Debit</th>
-        <th>Credit</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td contenteditable="true">1</td>
-        <td contenteditable="true" class="debit"></td>
-        <td contenteditable="true" class="credit"></td>
-      </tr>
-      <tr>
-        <td contenteditable="true">2</td>
-        <td contenteditable="true" class="debit"></td>
-        <td contenteditable="true" class="credit"></td>
-      </tr>
-      <tr>
-        <td contenteditable="true">3</td>
-        <td contenteditable="true" class="debit"></td>
-        <td contenteditable="true" class="credit"></td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>Total</td>
-        <td id="totalDebit">0</td>
-        <td id="totalCredit">0</td>
-      </tr>
-    </tfoot>
-  </table>
+  <label for="monthSelect">Select Month:</label>
+  <select id="monthSelect" onchange="generateDaysTable()">
+    <option value="">--Select--</option>
+    <option value="2025-01">January 2025</option>
+    <option value="2025-02">February 2025</option>
+    <option value="2025-03">March 2025</option>
+    <option value="2025-04">April 2025</option>
+    <option value="2025-05">May 2025</option>
+    <option value="2025-06">June 2025</option>
+    <option value="2025-07">July 2025</option>
+    <option value="2025-08">August 2025</option>
+    <option value="2025-09">September 2025</option>
+    <option value="2025-10">October 2025</option>
+    <option value="2025-11">November 2025</option>
+    <option value="2025-12">December 2025</option>
+  </select>
 
-  <button onclick="calculateDebt()">Calculate Remaining Debt</button>
+  <div id="tableContainer"></div>
 
   <div id="result"></div>
 
-  <a id="whatsapp" href="https://wa.me/" target="_blank">📲 Open WhatsApp</a>
+  <a id="whatsapp" href="#" target="_blank">📲 Open WhatsApp</a>
 
   <script>
-    // Safely evaluate arithmetic (no letters or symbols allowed except + - * / .)
+    // Get number of days in a month
+    function getDaysInMonth(year, month) {
+      return new Date(year, month, 0).getDate();
+    }
+
+    // Generate table dynamically
+    function generateDaysTable() {
+      const monthValue = document.getElementById("monthSelect").value;
+      if (!monthValue) return;
+
+      const [year, month] = monthValue.split("-");
+      const days = getDaysInMonth(year, month);
+
+      let tableHTML = `
+        <table id="debtTable">
+          <thead>
+            <tr>
+              <th>Day</th>
+              <th>Debit</th>
+              <th>Credit</th>
+            </tr>
+          </thead>
+          <tbody>`;
+
+      for (let i = 1; i <= days; i++) {
+        tableHTML += `
+          <tr>
+            <td>${i}</td>
+            <td contenteditable="true" class="debit"></td>
+            <td contenteditable="true" class="credit"></td>
+          </tr>`;
+      }
+
+      tableHTML += `
+          </tbody>
+          <tfoot>
+            <tr>
+              <td>Total</td>
+              <td id="totalDebit">0</td>
+              <td id="totalCredit">0</td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <button onclick="calculateDebt()">💰 Calculate Remaining Debt</button>
+              </td>
+            </tr>
+          </tfoot>
+        </table>`;
+
+      document.getElementById("tableContainer").innerHTML = tableHTML;
+
+      document.querySelectorAll(".debit, .credit").forEach(cell => {
+        cell.addEventListener("input", updateTotals);
+      });
+    }
+
+    // Safe evaluation for math expressions
     function safeEval(expression) {
       expression = expression.replace(/[^0-9+\-*/.()]/g, "");
       try {
@@ -128,15 +164,14 @@
     }
 
     function updateTotals() {
-      let debitCells = document.querySelectorAll(".debit");
-      let creditCells = document.querySelectorAll(".credit");
+      const debitCells = document.querySelectorAll(".debit");
+      const creditCells = document.querySelectorAll(".credit");
       let totalDebit = 0, totalCredit = 0;
 
       debitCells.forEach(cell => {
         let val = safeEval(cell.innerText.trim());
         if (!isNaN(val)) totalDebit += val;
       });
-
       creditCells.forEach(cell => {
         let val = safeEval(cell.innerText.trim());
         if (!isNaN(val)) totalCredit += val;
@@ -147,22 +182,18 @@
     }
 
     function calculateDebt() {
-      let totalDebit = parseFloat(document.getElementById("totalDebit").innerText) || 0;
-      let totalCredit = parseFloat(document.getElementById("totalCredit").innerText) || 0;
-      let remainingDebt = totalCredit + 10000 - totalDebit;
+      const totalDebit = parseFloat(document.getElementById("totalDebit").innerText) || 0;
+      const totalCredit = parseFloat(document.getElementById("totalCredit").innerText) || 0;
+      const remainingDebt = totalCredit + 10000 - totalDebit;
       document.getElementById("result").innerText = "💰 Remaining Debt: " + remainingDebt.toFixed(2);
+
+      // Prepare WhatsApp message
+      const monthName = document.getElementById("monthSelect").options[document.getElementById("monthSelect").selectedIndex].text;
+      const message = `📆 ${monthName}\nTotal Debit: ${totalDebit.toFixed(2)}\nTotal Credit: ${totalCredit.toFixed(2)}\nRemaining Debt: ${remainingDebt.toFixed(2)}`;
+      
+      const phoneNumber = "905XXXXXXXXX"; // <-- replace with your WhatsApp number
+      document.getElementById("whatsapp").href = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
     }
-
-    document.addEventListener("input", e => {
-      if (e.target.classList.contains("debit") || e.target.classList.contains("credit")) {
-        updateTotals();
-      }
-    });
-
-    // WhatsApp direct open (change to your number)
-    const phoneNumber = "905XXXXXXXXX"; // <-- put your number
-    document.getElementById("whatsapp").href = `https://wa.me/${phoneNumber}`;
   </script>
-
 </body>
 </html>
