--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       const monthName = document.getElementById("monthSelect").options[document.getElementById("monthSelect").selectedIndex].text;
       const message = `📆 ${monthName}\nTotal Debit: ${totalDebit.toFixed(2)}\nTotal Credit: ${totalCredit.toFixed(2)}\nRemaining Debt: ${remainingDebt.toFixed(2)}`;
       
-      const phoneNumber = "905XXXXXXXXX"; // <-- replace with your WhatsApp number
+      const phoneNumber = "905449468879"; // <-- replace with your WhatsApp number
       document.getElementById("whatsapp").href = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
     }
   </script>
